turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:9: error: Missing closing brace `}' assumed here
}
^LangtonsAnt:11: error: ':' expected but ')' found.
def setCouleurSol(couleur) {
                         ^LangtonsAnt:26: error: identifier expected but '}' found.
}
^